find one product swagger
